--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -12,4 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-#upload_port = COM9
+
+; [env:nanoevery]
+; platform = atmelmegaavr
+; board = nano_every
+; framework = arduino
